--- a/files/django/gunicorn.service.j2
+++ b/files/django/gunicorn.service.j2
@@ -3,10 +3,11 @@ Description=gunicorn daemon
 After=network.target
 
 [Service]
-User={{app_user}}
+User=it21906
 Group=www-data
-WorkingDirectory={{djangoservice.workingdir}}
-ExecStart={{djangoservice.execstart}}
+WorkingDirectory=/home/it21906/adminSystem/base
+ExecStart=/home/it21906/adminSystem/myvenv/bin/gunicorn --access-logfile - --workers 3  --bind unix:/home/it21906/adminSystem/base/base.sock base.wsgi:application
+
 
 [Install]
 WantedBy=multi-user.target
