--- a/files/nginx/demo.https.nginx.j2
+++ b/files/nginx/demo.https.nginx.j2
@@ -16,8 +16,9 @@ server {
       proxy_buffering off;
       proxy_pass http://localhost:{{app_port}};
     }
-
+    location /static {
+      autoindex on;
+      alias /var/www/base/static/;
+    }
 
   }
-
-  
