--- a/files/nginx/demo.nginx.j2
+++ b/files/nginx/demo.nginx.j2
@@ -1,16 +1,14 @@
 server {
-    listen 9000;
-    client_max_body_size 4G;
-
+    listen 8000;
     server_name _;
 
-    location / {
-      proxy_set_header Host $http_host;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_redirect off;
-      proxy_buffering off;
-      proxy_pass http://localhost:{{app_port}};
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location /static/ {
+        root /home/it21906/adminSystem/base;
     }
 
-  }
+    location / {
+        include proxy_params;
+        proxy_pass http://unix:/home/it21906/adminSystem/base/base.sock;
+    }
+}
