--- a/files/nginx/demo.nginx.j2
+++ b/files/nginx/demo.nginx.j2
@@ -1,9 +1,17 @@
+
 server {
-    listen 8000;
+    listen 80;
+    client_max_body_size 4G;
+
     server_name _;
 
     location / {
-        include proxy_params;
-        proxy_pass http://unix:/home/it21906/adminSystem/adminSystem/base/base.sock;
+      proxy_set_header Host $http_host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_redirect off;
+      proxy_buffering off;
+      proxy_pass http://localhost:{{app_port}};
     }
-}
+
+  }
