--- a/files/django/gunicorn.service.j2
+++ b/files/django/gunicorn.service.j2
@@ -6,7 +6,7 @@ After=network.target
 User=it21906
 Group=www-data
 WorkingDirectory=/home/it21906/adminSystem/base
-ExecStart=/home/it21906/adminSystem/myvenv/bin/gunicorn --access-logfile - --workers 3  --bind u--bind 0.0.0.0:5000 base.wsgi:application
+ExecStart=/home/it21906/adminSystem/myvenv/bin/gunicorn --access-logfile - --workers 3  --bind  0.0.0.0:8000 base.wsgi:application
 
 
 [Install]
